# ComputerGraphics

./: .gitignore  .gitmodules  Animation.h  Basic.def  Basic.frag  Basic.vert  BasicOutline.frag  BasicUniversal.frag  BinaryFileInfo.md  CMakeLists.txt  Light.frag  Light.vert  Main.cpp  Metadata.rc  Old.def  Quad.frag  README.md  Requirements.md  Skybox.frag  fs_basic.sc  varying.def.sc  vs_basic.sc  xcompileShader.bat  zcompileTexture.bat
Assets/: EliseSuperGalaxy_Diff.dds  SkyboxReadme.txt
Assets/Shaders/FrameQuad/: FrameQuad.frag
Assets/Shaders/Skybox/: Skybox.frag  Skybox.vert
Content/: Varying.def
Content/Models/Angel/: Skel_VoG.dae
Content/Models/Ashe/: Ashe_Woadleader.dae
Content/Models/Cube/: Cube.fbx
Content/Models/LeBlanc/: Leblanc_Skin04.dae
Content/Models/Spetsnaz/: specops.fbx
Content/Models/Spetsnaz/textures/: act_antigas.tga  act_antigas_nrm.tga  act_specnaz.tga  act_specnaz_nrm.tga
Content/Models/TestSkins/KogMaw/: KogMaw_Skin08.dae
Content/Shaders/: SkinnedMesh.frag  SkinnedMesh.vert  Varying.def
Content/Shaders/Deferred/: GBuffer.frag  LightingPass.def
Content/Shaders/StaticMesh/: StaticMesh.frag
Content/Shaders/TransQuad/: TransQuad.vert
Resources/Metadata/: Metadata.rc
Resources/Models/Jack/: HandsomeJack.dae
Resources/Shaders/Deferred/: GBuffer.frag  LightingPass.frag
Resources/Shaders/ScreenQuad/: ScreenQuad.vert
Resources/Shaders/StaticMesh/: StaticMesh.frag
Scripts/: ShaderCompiler.bat  ShaderCompiler.js  ShaderCompiler.py  TextureCompiler.bat
Source/: Actor.h  Animation.cpp  Animation.h  Animator.cpp  Animator.h  AssetManager.cpp  AssetManager.h  AssimpUtil.h  BinaryMesh.cpp  Bone.cpp  Bone.h  ContentManager.h  FileInput.h  FreeCameraActor.h  Level.cpp  Level.h  Main.cpp  MainTiny.cpp  Model.cpp  Model.h  OriginalMain.cpp  PerspectiveCamera.h  PlayerActor.cpp  PlayerActor.h  ProjCamera.cpp  ProjCamera.h  Renderer.cpp  Renderer.h  Renderer3D.h  Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h  SkinnedModel.cpp  SkinnedModel.h  Skybox.h  StaticModel.cpp  StaticModel.h  Texture.cpp  Texture.h  (+6 more)
Source/Components/: Transform.h
Source/ContentManager/: ContentManager.h  ModelManager.cpp  ModelManager.h  ShaderManager.h  TextureManager.h  UniformManager.cpp  UniformManager.h
Source/ContentManagers/: BufferManager.cpp  BufferManager.h  ContentManager.cpp  ContentManager.h  ModelManager.cpp  ModelManager.h  ShaderManager.cpp  ShaderManager.h  TextureManager.cpp  TextureManager.h  UniformManager.cpp  UniformManager.h
